--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
         uses: Platane/snk@v2
         with:
           github_user_name: Gsteixeira56
+          outputs: dist/snake.svg
 
       - name: Upload Snake animation to the output branch
         uses: crazy-max/ghaction-github-pages@v3.0.0
